# job_site_to_Postgres

./: .gitignore  README.md  main.py  pyproject.toml  queries.sql
utils/: DBPostgres.py  func.py  hh_vacancies.py
